@@ -8,6 +8,7 @@ plugins/cvs/interface.c
 plugins/fileroller/file-roller-plugin.c
 plugins/test/test-plugin.c
 src/dialogs/gnome-cmd-advrename-regex-dialog.cc
+src/dialogs/gnome-cmd-edit-profile-dialog.cc
 src/dialogs/gnome-cmd-manage-profiles-dialog.cc
 src/dirlist.cc
 src/eggcellrendererkeys.cc
