@@ -16,5 +16,6 @@ AM_CPPFLAGS = \
 	-DPLUGIN_DIR=\""$(libdir)/$(PACKAGE)/plugins"\"
 
 libgcmd_dialogs_a_SOURCES = \
-	gnome-cmd-manage-profiles-dialog.h gnome-cmd-manage-profiles-dialog.cc \
-	gnome-cmd-advrename-regex-dialog.h gnome-cmd-advrename-regex-dialog.cc
+	gnome-cmd-advrename-regex-dialog.h gnome-cmd-advrename-regex-dialog.cc \
+	gnome-cmd-edit-profile-dialog.h gnome-cmd-edit-profile-dialog.cc \
+	gnome-cmd-manage-profiles-dialog.h gnome-cmd-manage-profiles-dialog.cc
